--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h1>HuuBinh Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <h3><a href="/4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3> <br>
-    <img src="/assets/images/movie-ranking.png" height="200" alt="">
-    <h3><a href="/4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h3> <br>
-    <img src="/assets/images/birthday-invite.png" height="200" alt="">
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3> <br>
+    <img src="./assets/images/movie-ranking.png" height="200" alt="">
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3> <br>
+    <img src="./assets/images/birthday-invite.png" height="200" alt="">
     <hr>
-    <a href="/public/about.html">About Me</a>
-    <a href="/public/contact.html">Contact Me</a>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
